<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/dv_home"
        android:icon="@drawable/member2x"
        android:title="@string/nav_home">
    </item>
    <item
        android:id="@+id/dv_redeem_catalog"
        android:icon="@drawable/member2x"
        android:title="@string/nav_redeem_catalog">
    </item>
    <item
        android:id="@+id/dv_evoucher"
        android:icon="@drawable/member2x"
        android:title="@string/nav_evoucher">
    </item>
    <item
        android:id="@+id/dv_previlages"
        android:icon="@drawable/member2x"
        android:title="@string/nav_privileges">
    </item>
    <item
        android:id="@+id/dv_membership"
        android:icon="@drawable/member2x"
        android:title="@string/nav_membership">
    </item>
    <!--<item-->
        <!--android:id="@+id/dv_payment"-->
        <!--android:icon="@drawable/payment2x"-->
        <!--android:title="@string/nav_payment">-->
    <!--</item>-->
    <item
        android:id="@+id/dv_location"
        android:icon="@drawable/location2x"
        android:title="@string/nav_location">
    </item>
    <!--<item-->
        <!--android:id="@+id/dv_invite"-->
        <!--android:icon="@drawable/friend2x"-->
        <!--android:title="@string/nav_invite">-->
    <!--</item>-->
    <item
        android:id="@+id/dv_contactus"
        android:icon="@drawable/member2x"
        android:title="@string/nav_contactus">
    </item>
    <item
        android:id="@+id/dv_setting"
        android:icon="@drawable/member2x"
        android:title="@string/nav_setting">
    </item>
    <item
        android:id="@+id/dv_logout"
        android:icon="@drawable/member2x"
        android:title="@string/nav_logout">
    </item>
</menu>